# CrowdFundX

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTOR_SETUP_GUIDE.md  Frontend_Stellar_Integration.md  README.md  docker-compose.yml  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
backend/: jest.config.js  package.json
backend/src/: index.js
backend/src/config/: database.js  redis.js
backend/src/controllers/: campaignController.js
backend/src/middleware/: auth.js  errorHandler.js  validation.js
backend/src/models/: Campaign.js  Contribution.js  User.js
backend/src/routes/: auth.js  campaigns.js  contributions.js  stellar.js  users.js
backend/src/services/: stellarService.js
backend/src/utils/: logger.js
backend/tests/: api.test.js  models.test.js  setup.js
frontend/: index.html  jest.config.js  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: CampaignCard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: ProtectedRoute.tsx
frontend/src/pages/: CampaignDetailPage.tsx  CampaignsPage.tsx  CreateCampaignPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  (+1 more)
kubernetes/: deployment.yml  monitoring.yml
smart-contracts/: Cargo.toml  lib.rs
smart-contracts/campaigns/: campaign_manager.rs  mod.rs
smart-contracts/governance/: governance.rs
smart-contracts/tests/: campaign_manager_test.rs
smart-contracts/utils/: asset_management.rs  mod.rs
(+2 files in other folders)
